--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controversia-contractua/form-registrar-controversia-contractua.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controversia-contractua/form-registrar-controversia-contractua.component.html
@@ -4,25 +4,40 @@
       <img src="assets/img/icon/regresar.svg" alt="Regresar" />
     </a>
   </div>
-  <h1 class="title-menu--h1">Registrar controversia contractual</h1>rmGroup]="addressForm">
+  <h1 class="title-menu--h1">Registrar controversia contractual</h1>
+  <form [formGroup]="addressForm">
     <div class="row" style="margin-top: 2em; justify-content: center">
       <div class="col-md-6">
         <div class="row">
           <div class="pr-1">
-            <label class="label-left" for="numeroContrato" [class.color-secondaryColor]="
+            <label
+              class="label-left"
+              for="numeroContrato"
+              [class.color-secondaryColor]="
                 (addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) ||
                 (addressForm.get('numeroContrato').invalid && estaEditando)
-              ">
+              "
+            >
               Número de contrato
             </label>
           </div>
           <div class="col d-flex">
             <mat-form-field class="full-width">
-              <input matInput #nombre2 type="text" maxlength="10" [formControl]="myFilter" required
-                [matAutocomplete]="auto2" />
+              <input
+                matInput
+                #nombre2
+                type="text"
+                maxlength="10"
+                [formControl]="myFilter"
+                required
+                [matAutocomplete]="auto2"
+              />
               <mat-autocomplete #auto2="matAutocomplete">
-                <mat-option (click)="seleccionAutocomplete(nombres)" *ngFor="let nombres of filteredContrato | async"
-                  [value]="nombres">
+                <mat-option
+                  (click)="seleccionAutocomplete(nombres)"
+                  *ngFor="let nombres of filteredContrato | async"
+                  [value]="nombres"
+                >
                   {{ nombres }}
                 </mat-option>
               </mat-autocomplete>
@@ -35,7 +50,7 @@
             <img
               class="icon-incompleto--img"
               src="assets/img/icon/incompleto.svg"
-                            alt="este campo es requerido"
+              alt="este campo es requerido"
               [matTooltipPosition]="'above'"
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
@@ -43,15 +58,15 @@
               matTooltip="Debe ingresar la información en el campo para continuar"
               matTooltipClass="info-tooltip"
               *ngIf="
-                (addressForm.get('contrato').invalid && addressForm.get('contrato').touched) ||
-                (addressForm.get('contrato').invalid && estaEditando)
+                (addressForm.get('numeroContrato').invalid && addressForm.get('numeroContrato').touched) ||
+                (addressForm.get('numeroContrato').invalid && estaEditando)
               "
             />
           </span>
         </div>
       </div>
     </div>
-    <div *ngIf="this.selectedContract!=''">
+    <div *ngIf="this.selectedContract != ''">
       <mat-card class="shipping-card mainGris">
         <mat-card-header class="header-card">
           <mat-card-title class="header-card--text textoGris"> Datos del contrato </mat-card-title>
