--- a/asivamosffie.web/asivamosffie/src/app/_pages/inicio/components/inicio/inicio.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/inicio/components/inicio/inicio.component.html
@@ -1,12 +1,12 @@
 <div class="row iniciarSesion">
     <div class="col-md-6 iniciarSesion--logo">
         <img src="assets/img/logo/asi-vamos-ffie.svg" alt="Así vamos FFIE">
-        <p>Bienvenido(a) a continuación ingresará al módulo privado de Así Vamos FFIE</p>
+        <p>Bienvenido(a), a continuación ingresará al módulo privado de Así Vamos FFIE</p>
     </div>
     <div class="col-md-6 iniciarSesion--form">
         <mat-card class="iniciarSesion--form--contain">
             <form [formGroup]="formLogin" novalidate (ngSubmit)="login($event)">
-                <h1>Iniciar Sesión</h1>
+                <h1>Iniciar sesión</h1>
                 <hr>
                 <mat-form-field appearance="outline" class="nocontent">
                     <mat-label>Usuario *</mat-label>
