--- a/asivamosffie.web/asivamosffie/src/app/shared/components/header/header.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/header/header.component.scss
@@ -29,10 +29,10 @@
         line-height: 1.2;
         color: #174193;;
         color: var(--mainColor);
-        max-width: 16.2em;
+        width: 16.2em;
         @media only screen and (min-width: 48em) {
             position: absolute;
-            right: .5em;
+            right: 1em;
             top: 50%;
             transform: translateY(-50%);
         }
