--- a/asivamosffie.web/asivamosffie/src/app/shared/components/navbar/navbar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/shared/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar">
     <a mat-button routerLink="/home" routerLinkActive="active">
-        Menú Principal
+        Menú principal
     </a>
     <a mat-button routerLink="/cambiarContrasena" routerLinkActive="active">
         Cambiar contraseña
     </a>
     <button mat-button (click)="logout()">
-        Cerrar Sesión
+        Cerrar sesión
     </button>
 </nav>
