--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.scss
@@ -1,27 +1,4 @@
-.full-width {
-  width: 100%;
-}
-
-.shipping-card {
-  min-width: 120px;
-  margin: 20px auto;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-.col {
-  flex: 1;
-  margin-right: 20px;
-}
-
-.col:last-child {
-  margin-right: 0;
-}
-
-.radioInput>* {
+.radioInput > * {
   display: inline-block;
   margin: 5px 1em;
 }
@@ -31,10 +8,14 @@
   margin-bottom: 1em;
 }
 
-.maincolor{
+.maincolor {
   color: var(--mainColor);
-  }
+}
 
-  .mlmenor{
-    margin-left: -2em;
-  }
+.mlmenor {
+  margin-left: -2em;
+}
+
+.w-select-unico {
+  max-width: 434px;
+}
