--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
@@ -12,8 +12,8 @@
             class="label-left"
             for="UrlActa"
             [class.color-secondaryColor]="
-              (addressForm.get('UrlActa').invalid && addressForm.get('UrlActa').touched) ||
-              (addressForm.get('UrlActa').invalid && estaEditando)
+              (addressForm.get('urlActa').invalid && addressForm.get('urlActa').touched) ||
+              (addressForm.get('urlActa').invalid && estaEditando)
             "
           >
             URL Acta de recibo a satisfaccion - Obra
@@ -25,7 +25,7 @@
               matInput
               #numeroRadicadoInput
               type="url"
-              formControlName="UrlActa"
+              formControlName="urlActa"
               maxlength="20"
               required
             />
@@ -46,8 +46,8 @@
             src="assets/img/icon/incompleto.svg"
             alt="este campo es requerido"
             *ngIf="
-              (addressForm.get('UrlActa').invalid && addressForm.get('UrlActa').touched) ||
-              (addressForm.get('UrlActa').invalid && estaEditando)
+              (addressForm.get('urlActa').invalid && addressForm.get('urlActa').touched) ||
+              (addressForm.get('urlActa').invalid && estaEditando)
             "
           />
         </span>
@@ -58,13 +58,13 @@
             <div class="pr-1">
               <label
                 class="label-left"
-                for="FechaSuscripcion"
+                for="fechaSuscripcion"
                 [class.color-secondaryColor]="
-                  (addressForm.get('FechaSuscripcion').invalid && addressForm.get('FechaSuscripcion').touched) ||
-                  (addressForm.get('FechaSuscripcion').invalid && estaEditando)
+                  (addressForm.get('fechaSuscripcion').invalid && addressForm.get('fechaSuscripcion').touched) ||
+                  (addressForm.get('fechaSuscripcion').invalid && estaEditando)
                 "
               >
-                Fecha
+                Fecha de suscripción
               </label>
             </div>
             <div class="col d-flex">
@@ -72,7 +72,7 @@
                 <input
                   matInput
                   [matDatepicker]="pickerSolicitudNovedad"
-                  formControlName="FechaSuscripcion"
+                  formControlName="fechaSuscripcion"
                   readonly
                   (click)="pickerSolicitudNovedad.open()"
                   placeholder="DD/MM/AAAA"
@@ -98,8 +98,8 @@
                   src="assets/img/icon/incompleto.svg"
                   alt="este campo es requerido"
                   *ngIf="
-                    (addressForm.get('FechaSuscripcion').invalid && addressForm.get('FechaSuscripcion').touched) ||
-                    (addressForm.get('FechaSuscripcion').invalid && estaEditando)
+                    (addressForm.get('fechaSuscripcion').invalid && addressForm.get('fechaSuscripcion').touched) ||
+                    (addressForm.get('fechaSuscripcion').invalid && estaEditando)
                   "
                 />
               </span>
