--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -44,15 +44,15 @@
           Estado del requisito
         </th>
         <td mat-cell *matCellDef="let element">
-          {{element.calificacionCodigo}}
           <section class="slect-table-contain mt-1em">
             <mat-form-field class="select-width">
+              <mat-label>{{element.calificacionCodigoString}}</mat-label>
               <mat-select
                 [(ngModel)]="element.calificacionCodigo"
                 (selectionChange)="select(element)"
                 required
               >
-                <mat-option
+                <mat-option 
                   *ngFor="let estado of estadoArray"
                   [value]="estado.value"
                 >
@@ -79,7 +79,7 @@
           </th>
         <td mat-cell *matCellDef="let element">
           <button
-          *ngIf="element.calificacionCodigo === 1"
+          *ngIf="element.calificacionCodigo === '1' || element.calificacionCodigo === 1"
               mat-button
               color="warn"
               mat-raised-button
@@ -88,11 +88,11 @@
               type="button"
               (click)="openDialogTipoDocumento(element)"
             >
-            <span *ngIf="!element.tieneObservacionSupervisor">Tipo de documento</span>
-            <span *ngIf="element.tieneObservacionSupervisor">Ver detalle/ Editar</span>
+            <span *ngIf="element.informeFinalAnexoId == null || element.informeFinalAnexoId==0">Tipo de documento</span>
+            <span *ngIf="element.informeFinalAnexoId != null && element.informeFinalAnexoId>0">Ver detalle/ Editar</span>
             </button>
           <button
-          *ngIf="element.calificacionCodigo === 2"
+          *ngIf="element.calificacionCodigo === '2' || element.calificacionCodigo === 2"
               mat-button
               color="warn"
               mat-raised-button
