--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/dialog-tipo-documento/dialog-tipo-documento.component.html
@@ -1,14 +1,10 @@
-<button
-  mat-button
-  mat-dialog-close
-  class="modal--btn-cerrar"
-  [mat-dialog-close]="null"
->
+<button mat-button mat-dialog-close class="modal--btn-cerrar" [mat-dialog-close]="null">
   <img src="assets/img/icon/cerrar-blanco.svg" alt="cerrar" />
 </button>
 
 <div class="text-center">
-  <h1 class="title-menu--h1">Tipo de documento 
+  <h1 class="title-menu--h1">
+    Tipo de documento
     {{ data.llaveMen }}
   </h1>
   <p>
@@ -41,10 +37,7 @@
             <div class="col">
               <mat-form-field class="select-width">
                 <mat-select required formControlName="tipoAnexo">
-                  <mat-option
-                    *ngFor="let tipo of tipoAnexoArray"
-                    [value]="tipo.value"
-                  >
+                  <mat-option *ngFor="let tipo of tipoAnexoArray" [value]="tipo.value">
                     {{ tipo.name }}
                   </mat-option>
                 </mat-select>
@@ -55,6 +48,9 @@
                 class="icon-incompleto--img"
                 src="assets/img/icon/incompleto.svg"
                 alt="este campo es requerido"
+                [matTooltipPosition]="'above'"
+                matTooltip="Debe ingresar la información en el campo para continuar"
+                matTooltipClass="info-tooltip"
                 *ngIf="
                   (addressForm.get('tipoAnexo').invalid && addressForm.get('tipoAnexo').touched) ||
                   (addressForm.get('tipoAnexo').invalid && estaEditando)
@@ -70,12 +66,11 @@
             class="label-left"
             for="urlSoporte"
             [class.color-secondaryColor]="
-              (addressForm.get('urlSoporte').invalid &&
-                addressForm.get('urlSoporte').touched) ||
+              (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
               (addressForm.get('urlSoporte').invalid && estaEditando)
             "
           >
-          Url con soporte
+            Url con soporte
           </label>
         </div>
         <div class="col">
@@ -87,22 +82,21 @@
               formControlName="urlSoporte"
               maxlength="20"
               required
+              [matTooltipPosition]="'above'"
+              matTooltip="Campo alfanumérico"
+              matTooltipClass="info-tooltip"
             />
           </mat-form-field>
-          <span
-            class="info-url"
-            [matTooltipPosition]="'above'"
-            matTooltip="Campo alfanumérico"
-            matTooltipClass="info-tooltip"
-          >
-            Indique la ruta en la que se encuentra el soporte del documento
-          </span>
+          <span class="info-url"> Indique la ruta en la que se encuentra el soporte del documento </span>
         </div>
         <span class="icon-incompleto mr-05em">
           <img
             class="icon-incompleto--img"
             src="assets/img/icon/incompleto.svg"
             alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
             *ngIf="
               (addressForm.get('urlSoporte').invalid && addressForm.get('urlSoporte').touched) ||
               (addressForm.get('urlSoporte').invalid && estaEditando)
@@ -118,12 +112,11 @@
                 class="label-left"
                 for="numRadicadoSac"
                 [class.color-secondaryColor]="
-                  (addressForm.get('numRadicadoSac').invalid &&
-                    addressForm.get('numRadicadoSac').touched) ||
+                  (addressForm.get('numRadicadoSac').invalid && addressForm.get('numRadicadoSac').touched) ||
                   (addressForm.get('numRadicadoSac').invalid && estaEditando)
                 "
-              > 
-              Número de radicado en SAC
+              >
+                Número de radicado en SAC
               </label>
             </div>
             <div class="col d-flex">
@@ -150,6 +143,9 @@
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
                   alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('numRadicadoSac').invalid && addressForm.get('numRadicadoSac').touched) ||
                     (addressForm.get('numRadicadoSac').invalid && estaEditando)
@@ -168,12 +164,11 @@
                 class="label-left"
                 for="fechaRadicado"
                 [class.color-secondaryColor]="
-                  (addressForm.get('fechaRadicado').invalid &&
-                    addressForm.get('fechaRadicado').touched) ||
+                  (addressForm.get('fechaRadicado').invalid && addressForm.get('fechaRadicado').touched) ||
                   (addressForm.get('fechaRadicado').invalid && estaEditando)
                 "
               >
-              Fecha de radicado
+                Fecha de radicado
               </label>
             </div>
             <div class="col d-flex">
@@ -196,16 +191,16 @@
                 (click)="pickerFechaDeRadicado.open()"
                 class="btn-calendario"
               >
-                <img
-                  src="assets/img/icon/calendarioCirculo.svg"
-                  alt="Abrir Calendario"
-                />
+                <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
               </button>
               <span class="icon-incompleto">
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
                   alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('fechaRadicado').invalid && addressForm.get('fechaRadicado').touched) ||
                     (addressForm.get('fechaRadicado').invalid && estaEditando)
