--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/form-recibo-a-satisfaccion/form-recibo-a-satisfaccion.component.html
@@ -1,9 +1,7 @@
 <form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header class="header-card header-card--margin">
-      <mat-card-title class="mat-card-title header-card--text">
-        Recibo a satisfacción
-      </mat-card-title>
+      <mat-card-title class="mat-card-title header-card--text"> Recibo a satisfacción </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <div class="row">
@@ -27,24 +25,22 @@
               type="url"
               formControlName="urlActa"
               maxlength="20"
+              [matTooltipPosition]="'above'"
+              matTooltip="Campo alfanumérico"
+              matTooltipClass="info-tooltip"
               required
             />
           </mat-form-field>
-          <span
-            class="info-url"
-            [matTooltipPosition]="'above'"
-            matTooltip="Campo alfanumérico"
-            matTooltipClass="info-tooltip"
-          >
-            Indique la ruta en la que se encuentra el Acta de recibo a
-            satisfacción - Obra
-          </span>
+          <span class="info-url"> Indique la ruta en la que se encuentra el Acta de recibo a satisfacción - Obra </span>
         </div>
         <span class="icon-incompleto">
           <img
             class="icon-incompleto--img"
             src="assets/img/icon/incompleto.svg"
             alt="este campo es requerido"
+            [matTooltipPosition]="'above'"
+            matTooltip="Debe ingresar la información en el campo para continuar"
+            matTooltipClass="info-tooltip"
             *ngIf="
               (addressForm.get('urlActa').invalid && addressForm.get('urlActa').touched) ||
               (addressForm.get('urlActa').invalid && estaEditando)
@@ -87,16 +83,16 @@
                 (click)="pickerSolicitudNovedad.open()"
                 class="btn-calendario"
               >
-                <img
-                  src="assets/img/icon/calendarioCirculo.svg"
-                  alt="Abrir Calendario"
-                />
+                <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
               </button>
               <span class="icon-incompleto">
                 <img
                   class="icon-incompleto--img"
                   src="assets/img/icon/incompleto.svg"
                   alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                   *ngIf="
                     (addressForm.get('fechaSuscripcion').invalid && addressForm.get('fechaSuscripcion').touched) ||
                     (addressForm.get('fechaSuscripcion').invalid && estaEditando)
@@ -110,8 +106,7 @@
     </mat-card-content>
   </mat-card>
   <div class="text-center mb-2em">
-    <button mat-button color="warn" class="btn-guardar" type="submit"
-    [disabled]="addressForm.invalid">
+    <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.invalid">
       <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
   </div>
