--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-actas/tabla-gestion-actas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/tabla-gestion-actas/tabla-gestion-actas.component.html
@@ -25,7 +25,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del acta </th>
       <td mat-cell *matCellDef="let element" align="center">
         <span *ngIf="element.estadoActaCodigo === estadoActa.revisarActa">Revisar acta</span>
-        <span *ngIf="element.estadoActaCodigo === '4'">Devuelta</span>
+        <span *ngIf="element.estadoActaCodigo === estadoActa.devuelto">Devuelta</span>
         <span *ngIf="element.estadoActaCodigo === estadoActa.aprobado">Aprobada</span>
       </td>
     </ng-container>
@@ -37,7 +37,7 @@
         <button mat-raised-button 
                 color="accent" 
                 class="btn-table"
-                *ngIf="element.estadoActaCodigo === estadoActa.revisarActa && element.esVotoAprobado === false"
+                *ngIf="element.estadoActaCodigo === estadoActa.revisarActa"
                 (click)="revisarActa( element )">
                 Revisar acta
         </button>
@@ -53,7 +53,7 @@
         <button mat-raised-button 
                 color="accent"
                 class="btn-table"
-                *ngIf="element.estadoActaCodigo === estadoActa.aprobado || ( element.esVotoAprobado === true && element.estadoActaCodigo !== estadoActa.aprobado )"
+                *ngIf="element.estadoActaCodigo === estadoActa.aprobado"
                 (click)="getActaPdf( element.comiteTecnicoId, element.numeroComite )">
                 Descargar acta aprobada
         </button>
