Semáforo lista de chequeo

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/informe-final-anexos/informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/informe-final-anexos/informe-final-anexos.component.html
@@ -8,7 +8,7 @@
   <mat-accordion>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title">
+        <mat-panel-title [ngClass]="'expansion-style--title ' + estadoInformeString">
           Informe final y anexos
         </mat-panel-title>
       </mat-expansion-panel-header>
